<RelativeLayout
    android:id="@+id/toPlayFragmentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angus.gaming.blackredsolitaire.view.ToPlayFragment"
    android:background="@drawable/zone_deck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"

            android:text="@string/howToPlay"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/hint_imageview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/hint_one"/>

        <TextView
            android:id="@+id/hint_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:text="@string/hintOne"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/previousButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:background="@drawable/button_game"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_game"
        android:text="@string/next"/>

</RelativeLayout>
